--- a/SampleToDo/GoogleService-Info.plist
+++ b/SampleToDo/GoogleService-Info.plist
@@ -19,15 +19,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>smapletodo.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:527219662220:ios:12043466a576a1cb394aa9</string>
 </dict>
